src/objects/ChangeLog__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. Object to track all Work Request change log data.</description>
    <fields>
        <fullName>ChangeDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeDocumentedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Change Documented By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>This field is used for data integration to store legacy system id in WRF POLK application.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for data integration to store legacy system id in WRF POLK application.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>PLC Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>Change Logs</relationshipLabel>
        <relationshipName>ChangeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductionComments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Production Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Programmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Programmer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RevisedRequestDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Revised Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedDateTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WRStatus__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>text(WorkRequestForm__r.RequestStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Change Logs</relationshipLabel>
        <relationshipName>ChangeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Log</label>
    <listViews>
        <fullName>APACWRF_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC WRF</label>
        <queue>APACWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AustraliaWRF_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia WRF</label>
        <queue>AustraliaWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Autonews_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Autonews</label>
        <queue>Autonews</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CanadaProduction_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada</label>
        <queue>Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada</label>
        <queue>Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EuropeanWRF_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>European WRF</label>
        <queue>EuropeanWRF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JeffAllen_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Jeff Allen</label>
        <queue>JeffAllen</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MCMAnalytics_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>MCM - Analytics</label>
        <queue>MCMAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingAnalytics_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - Analytics</label>
        <queue>MarketReportingAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingCAP_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - CAP</label>
        <queue>MarketReportingCAP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingLoyalty_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - Loyalty</label>
        <queue>MarketReportingLoyalty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingOEMStat_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - OEM Stat</label>
        <queue>MarketReportingOEMStat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PolkConnectAnalytics_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>PolkConnect Analytics</label>
        <queue>PolkConnectAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PolkConnectSystem_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>PolkConnect System</label>
        <queue>PolkConnectSystem</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SalesforceSupport_ChangeLog</fullName>
        <filterScope>Queue</filterScope>
        <label>Salesforce Support</label>
        <queue>SalesforceSupport</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>